[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-management-dashboard"
version = "0.1.0"
description = "Borrowing base and collateral risk dashboard for asset-based lending."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "XlsxWriter>=3.2",
]

[project.optional-dependencies]
dev = [
  "openpyxl>=3.1",
  "pytest>=8.0",
]

[project.scripts]
abl-dashboard = "risk_dashboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
